# incumbency-desktop

./: .gitignore  .prettierrc  README.md  devshell.toml  index.html  package-lock.json  package.json  shell.nix  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: tauri.yml
assets/stylesheets/: colorGuideline.scss  global.css  global.scss
docs/rust/: (1) Generation.md  Events.md  README.md
src/: App.svelte  App.vue  app.css  constants.ts  main.ts  router.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  game_config.toml  tauri.conf.json
src-tauri/src/: config.rs  game.rs  generation.rs  main.rs  new_game.rs  util.rs
src-tauri/src/common/: config.rs  errors.rs  filesystem.rs  mod.rs  payloads.rs  util.rs
src-tauri/src/entities/: business.rs  mod.rs  person.rs
src-tauri/src/entities/person/: debt.rs  health.rs  mod.rs  person.rs  welfare.rs
src-tauri/src/game/: events.rs  generation.rs  manager.rs  mod.rs  state_manager.rs  structs.rs
src/components/: Loading.vue  Notification.vue  Notifications.vue  Window.vue
src/events/: windowEvents.ts
src/scripts/: criticalWindowData.ts  data.ts  desktopApp.ts  desktopConstants.ts  email.ts  notificationData.ts  placeholder.ts  text.ts  util.ts  windowEvent.ts
src/store/: app.ts  apps.ts  emails.ts  game.ts  graphs.ts  notifications.ts  windows.ts
src/stores/: appState.ts  menuState.ts
src/util/: data.ts  events.ts
src/views/: LoadingGame.vue  MainMenu.vue  NewGame.vue  SettingsMenu.vue  SinglePlayer.vue
src/windows/: Business.vue  Email.vue  Finances.vue  OverviewData.vue  (+1 more)
(+120 files in other folders)
